[metadata]
name = pytest-docker
version =  0.9.0
description = Simple pytest fixtures for Docker and docker-compose based tests
long_description = file: README.md
long_description_content_type = text/markdown
keywords = docker,docker-compose,pytest
url = https://github.com/avast/pytest-docker

author = Max K., Andre Caron
author_email = maxim.kovykov@avast.com

license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows

[options]
python_requires = >= 3.5

package_dir=
    =src

packages=pytest_docker

install_requires =
    pytest >=5.0, <6.0
    attrs >=19, <20
    docker-compose >=1.26.0, <2.0  # TODO: Require 1.26.1 once it is out

[options.extras_require]
tests =
    requests >=2.22.0, <3.0
    pytest-pylint >=0.14.1, <1.0
    pytest-pycodestyle >=2.0.0, <3.0

[tool:pytest]
addopts = --verbose --pylint-rcfile=setup.cfg --pylint --pycodestyle

[pycodestyle]
max-line-length=120
ignore=E4,E7,W3

# Configuration for pylint
[MASTER]
ignore=CVS
good-names=logger,e,i,j,n,m,f,_

[MESSAGES CONTROL]
disable=all
enable=unused-import,
       fixme,
       useless-object-inheritance,
       unused-variable,
       unused-argument,
       unexpected-keyword-arg,
       string,
       unreachable,
       invalid-name,
       logging-not-lazy,
       unnecesary-pass
