[metadata]
name = pytest-docker
version =  2.0.1
description = Simple pytest fixtures for Docker and Docker Compose based tests
long_description = file: README.md
long_description_content_type = text/markdown
keywords = docker,docker-compose,pytest
url = https://github.com/avast/pytest-docker

author = Max K., Andre Caron
author_email = maxim.kovykov@avast.com

license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows

[options]
python_requires = >= 3.6

package_dir=
    =src

packages=pytest_docker

install_requires =
    pytest >=4.0, <8.0
    attrs >=19.2.0

[options.extras_require]
docker-compose-v1 =
    docker-compose >=1.27.3, <2.0
tests =
    requests >=2.22.0, <3.0
    pytest-pylint >=0.14.1, <1.0
    pytest-pycodestyle >=2.0.0, <3.0

[options.entry_points]
pytest11 =
    docker = pytest_docker

[tool:pytest]
addopts = --verbose --pylint-rcfile=setup.cfg
# --pylint --pycodestyle

[pycodestyle]
max-line-length=120
ignore=E4,E7,W3

# Configuration for pylint
[MASTER]
ignore=CVS
good-names=logger,e,i,j,n,m,f,_

[MESSAGES CONTROL]
disable=all
enable=unused-import,
       fixme,
       useless-object-inheritance,
       unused-variable,
       unused-argument,
       unexpected-keyword-arg,
       string,
       unreachable,
       invalid-name,
       logging-not-lazy,
       unnecesary-pass
